# vitess

./: .gitignore  BUILD  Dockerfile.configv3.pinterest  Dockerfile.pinterest  Dockerfile.vtctld.pinterest  WORKSPACE  bazel_bootstrap.sh  bootstrap.sh  build_with_bazel.sh  go.mod  go.sum
bazel/: BUILD  govendor_to_bazel.py
config/: pinterest_acls.json
config/pinterest/: vitess_databases  vitess_environments  vitess_pinterest_acls
config/vschemas/: patio.json  patiogeneral.json
data/test/vtgate/: pinterest_cases.txt  pinterest_merge_left_joins.txt  schema_test.json  select_cases.txt
docker/base/: Dockerfile.percona
docker/bootstrap/: Dockerfile.common  Dockerfile.percona
docker/pinterest/: Dockerfile.bazel.vtgate  Dockerfile.bazel.vttablet  Dockerfile.prod.vtgate
go/acl/: role_whitelist_policy.go
go/cgzip/: adler32.go
go/cmd/pinschema/: check_sharding_integrity.go  check_sharding_integrity_test.go  common.go  create_lookup_vindex.go  create_lookup_vindex_test.go  create_sequence_tables.go  create_sequence_tables_test.go  create_vschema.go  create_vschema_test.go  pinschema.go  pinschema_test.go  remove_auto_inc.go  remove_auto_inc_test.go  test_common.go  validate_vschema.go  validate_vschema_test.go
go/cmd/vtgate/: plugin_auth_knox.go  plugin_opentsdb.go
go/cmd/vtworker/: plugin_grpcvtworkerserver.go  vtworker.go
go/cmd/zk/: zkcmd.go
go/decider/: decider.go  decider_test.go
go/decider/testdata/: config.txt  config2.txt
go/flagutil/: flagutil.go  flagutil_test.go  pinterest_flagutil.go  pinterest_flagutil_test.go
go/knox/: README.md  client.go  config.go  knoxclient.go  knoxclient_test.go  tls.go  tls_test.go
go/mysql/: auth_server.go  auth_server_clientcert.go  auth_server_clientcert_test.go  auth_server_none.go  auth_server_static.go  auth_server_static_flaky_test.go  auth_server_static_test.go  client.go  conn.go  handshake_test.go  server.go  server_flaky_test.go  server_test.go
go/mysql/endtoend/: client_test.go  query_test.go
go/mysql/fakesqldb/: server.go
go/mysql/knoxauth/: auth_knox.go  auth_knox_test.go  auth_pinterest.go  auth_pinterest_test.go  multi_client.go
go/mysql/ldapauthserver/: auth_server_ldap.go
go/pools/: resource_pool_flaky_test.go  resource_pool_test.go
go/stats/: export.go  histogram.go  pinterest_histogram_percentile_hook.go  pinterest_stats.go
go/stats/opentsdb/: BUILD.bazel  opentsdb.go  opentsdb_adapter.go  opentsdb_backend.go  opentsdb_client.go  opentsdb_test.go  pinterest_opentsdb.go
go/streamlog/: streamlog.go
go/testfiles/: BUILD.bazel
go/vt/callerid/: callerid.go
go/vt/dbconfigs/: credentials.go  pinterest_credentials.go
go/vt/discovery/: healthcheck_flaky_test.go  healthcheck_test.go
go/vt/grpcclient/: client_auth_knox.go  client_test.go
go/vt/grpccommon/: options.go
go/vt/mysqlctl/: schema.go
go/vt/servenv/: BUILD.bazel  buildinfo.go  grpc_server.go  grpc_server_auth_knox.go  run.go  status.go
go/vt/sqlparser/: ast.go  sql.go  (+3 more)
hooks/: vttablet_state_change
py/vttest/: run_local_database.py  vt_processes.py
scripts/: alert_shard_tablet_master_drift.sh  alert_vschema_drift.sh  apply_schema.sh  build_artifact_and_prod_docker_image.sh  build_pinterest_docker.sh  cp_cell_info.sh  docker_mysql_cli.sh  fix_gomod.sh  fix_vschema.sh  jenkins_build.sh  package_deb.sh  print_not_yet_supported_tests.sh  pvtctl.sh  regen_vschemas.sh  run_dev_vtgate_locally.sh  run_supported_tests.sh  run_tests_within_docker.sh  start_vtgate_demo.sh  validate_schemas.sh  vtctld_cron.sh  vtctld_startup.sh  vtgate_startup.sh  vttablet_state_reconcile.sh  vtworker_startup.sh  workspace_status.sh  write_build_artifact_to_stdout.sh
teletraan/: RESTARTING  vitess
teletraan/config/: serviceset.conf  serviceset.patio-replay.conf  serviceset.patio-shadow.conf  serviceset.prod.conf  serviceset.test.conf
test/: config.json  prepared_statement_test.py
tools/: build_version_flags.sh
(+99 files in other folders)
