load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["opentsdb.go"],
    importpath = "vitess.io/vitess/go/stats/opentsdb",
    visibility = ["//visibility:public"],
    x_defs = {
        # Use --workspace_status_command=./scripts/workspace_status.sh in your bazel
        # command to make sure this is set.
        "buildGitRev": "{GIT_REVISION}",
    },
    deps = [
        "//go/stats:go_default_library",
        "//go/vt/log:go_default_library",
        "//go/vt/servenv:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["opentsdb_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//go/stats:go_default_library",
        "@com_github_rcrowley_go_metrics//:go_default_library",
    ],
)
